--- a/404.html
+++ b/404.html
@@ -12,18 +12,18 @@
 		<meta name="msapplication-TileColor" content="#3bc7ff" />
 		<meta name="theme-color" content="#ffffff" />
 		
-		<link rel="modulepreload" href="/_app/immutable/entry/start.d269cbb2.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/start.9e7875c3.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/index.3647f7f4.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/singletons.cc265ad0.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/paths.a3d947f2.js">
-		<link rel="modulepreload" href="/_app/immutable/entry/app.13ef8333.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/singletons.6bf5e284.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/paths.500e417d.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/app.2152a1ab.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/preload-helper.41c905a7.js">
 	</head>
 	<body class="h-full overflow-x-clip">
 		<div class="flex flex-col min-h-full">
 			<script>
 				{
-					__sveltekit_15cb1ow = {
+					__sveltekit_fcrnck = {
 						base: "",
 						env: {"PUBLIC_DOMAIN":"https://bcked.com"}
 					};
@@ -31,8 +31,8 @@
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("/_app/immutable/entry/start.d269cbb2.js"),
-						import("/_app/immutable/entry/app.13ef8333.js")
+						import("/_app/immutable/entry/start.9e7875c3.js"),
+						import("/_app/immutable/entry/app.2152a1ab.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element);
 					});
