--- a/404.html
+++ b/404.html
@@ -12,18 +12,18 @@
 		<meta name="msapplication-TileColor" content="#3bc7ff" />
 		<meta name="theme-color" content="#ffffff" />
 		
-		<link rel="modulepreload" href="/_app/immutable/entry/start.58dae8b9.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/start.27b3dca9.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/index.3647f7f4.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/singletons.582ef929.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/paths.dc8e2208.js">
-		<link rel="modulepreload" href="/_app/immutable/entry/app.de7a3bb6.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/singletons.0b058b56.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/paths.c0198c97.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/app.7ec5124f.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/preload-helper.41c905a7.js">
 	</head>
 	<body class="h-full overflow-x-clip">
 		<div class="flex flex-col min-h-full">
 			<script>
 				{
-					__sveltekit_hv39lj = {
+					__sveltekit_19zy9g7 = {
 						base: "",
 						env: {"PUBLIC_DOMAIN":"https://bcked.com"}
 					};
@@ -31,8 +31,8 @@
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("/_app/immutable/entry/start.58dae8b9.js"),
-						import("/_app/immutable/entry/app.de7a3bb6.js")
+						import("/_app/immutable/entry/start.27b3dca9.js"),
+						import("/_app/immutable/entry/app.7ec5124f.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element);
 					});
